// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SubSettingsComponent analyticalTimeToLive hidden 1`] = `
<Stack
  tokens={
    {
      "childrenGap": 20,
    }
  }
>
  <Stack
    tokens={
      {
        "childrenGap": 5,
      }
    }
  >
    <StyledChoiceGroup
      id="timeToLive"
      label="Time to Live"
      onChange={[Function]}
      options={
        [
          {
            "ariaLabel": "ttl-off-option",
            "key": "off",
            "text": "Off",
          },
          {
            "ariaLabel": "ttl-on-no-default-option",
            "key": "on-nodefault",
            "text": "On (no default)",
          },
          {
            "ariaLabel": "ttl-on-option",
            "key": "on",
            "text": "On",
          },
        ]
      }
      selectedKey="on"
      styles={
        {
          "flexContainer": [
            {
              "columnGap": "default",
              "display": "default",
              "selectors": {
                ".ms-ChoiceField-field.is-checked::after": {
                  "borderColor": "",
                },
                ".ms-ChoiceField-field.is-checked::before": {
                  "borderColor": "",
                },
                ".ms-ChoiceField-wrapper label": {
                  "fontFamily": undefined,
                  "fontSize": 14,
                  "padding": "2px 5px",
                  "whiteSpace": "nowrap",
                },
              },
            },
          ],
        }
      }
    />
    <StyledTextFieldBase
      ariaLabel="Time to live in seconds"
      data-test="ttl-input"
      id="timeToLiveSeconds"
      max={2147483647}
      min={1}
      onChange={[Function]}
      required={true}
      styles={
        {
          "fieldGroup": {
            "borderColor": "",
            "height": 25,
            "selectors": {
              ":disabled": {
                "backgroundColor": undefined,
                "borderColor": undefined,
              },
            },
            "width": 300,
          },
        }
      }
      suffix="second(s)"
      type="number"
      value="1000"
    />
  </Stack>
  <StyledChoiceGroup
    id="geoSpatialConfig"
    label="Geospatial Configuration"
    onChange={[Function]}
    options={
      [
        {
          "key": "Geography",
          "text": "Geography",
        },
        {
          "key": "Geometry",
          "text": "Geometry",
        },
      ]
    }
    selectedKey="Geography"
    styles={
      {
        "flexContainer": [
          {
            "columnGap": "default",
            "display": "default",
            "selectors": {
              ".ms-ChoiceField-field.is-checked::after": {
                "borderColor": "",
              },
              ".ms-ChoiceField-field.is-checked::before": {
                "borderColor": "",
              },
              ".ms-ChoiceField-wrapper label": {
                "fontFamily": undefined,
                "fontSize": 14,
                "padding": "2px 5px",
                "whiteSpace": "nowrap",
              },
            },
          },
        ],
      }
    }
  />
  <Stack>
    <StyledLabelBase
      id="settingsV2ChangeFeedLabelId"
    >
      <ToolTipLabelComponent
        label="Change feed log retention policy"
        toolTipElement={
          <Text
            styles={
              {
                "root": {
                  "color": "windowtext",
                  "fontSize": 14,
                },
              }
            }
          >
            Enable change feed log retention policy to retain last 10 minutes of history for items in the container by default. To support this, the request unit (RU) charge for this container will be multiplied by a factor of two for writes. Reads are unaffected.
          </Text>
        }
      />
    </StyledLabelBase>
    <StyledChoiceGroup
      aria-labelledby="settingsV2ChangeFeedLabelId"
      id="changeFeedPolicy"
      onChange={[Function]}
      options={
        [
          {
            "key": "Off",
            "text": "Off",
          },
          {
            "key": "On",
            "text": "On",
          },
        ]
      }
      selectedKey="On"
      styles={
        {
          "flexContainer": [
            {
              "columnGap": "default",
              "display": "default",
              "selectors": {
                ".ms-ChoiceField-field.is-checked::after": {
                  "borderColor": "",
                },
                ".ms-ChoiceField-field.is-checked::before": {
                  "borderColor": "",
                },
                ".ms-ChoiceField-wrapper label": {
                  "fontFamily": undefined,
                  "fontSize": 14,
                  "padding": "2px 5px",
                  "whiteSpace": "nowrap",
                },
              },
            },
          ],
        }
      }
    />
  </Stack>
  <Stack
    tokens={
      {
        "childrenGap": 5,
      }
    }
  >
    <StyledTextFieldBase
      defaultValue="/partitionKey"
      disabled={true}
      label="Partition key"
      styles={
        {
          "fieldGroup": {
            "borderColor": "",
            "height": 25,
            "selectors": {
              ":disabled": {
                "backgroundColor": undefined,
                "borderColor": undefined,
              },
            },
            "width": 300,
          },
        }
      }
    />
    <Text>
      Large 
      partition key
       has been enabled.
    </Text>
    <Text>
      Non-hierarchically partitioned container.
    </Text>
  </Stack>
  <Stack
    tokens={
      {
        "childrenGap": 5,
      }
    }
  >
    <StyledTextFieldBase
      defaultValue="/id"
      disabled={true}
      label="Unique keys"
      styles={
        {
          "fieldGroup": {
            "borderColor": "",
            "height": 25,
            "selectors": {
              ":disabled": {
                "backgroundColor": undefined,
                "borderColor": undefined,
              },
            },
            "width": 300,
          },
        }
      }
    />
  </Stack>
</Stack>
`;

exports[`SubSettingsComponent analyticalTimeToLiveSeconds hidden 1`] = `
<Stack
  tokens={
    {
      "childrenGap": 20,
    }
  }
>
  <Stack
    tokens={
      {
        "childrenGap": 5,
      }
    }
  >
    <StyledChoiceGroup
      id="timeToLive"
      label="Time to Live"
      onChange={[Function]}
      options={
        [
          {
            "ariaLabel": "ttl-off-option",
            "key": "off",
            "text": "Off",
          },
          {
            "ariaLabel": "ttl-on-no-default-option",
            "key": "on-nodefault",
            "text": "On (no default)",
          },
          {
            "ariaLabel": "ttl-on-option",
            "key": "on",
            "text": "On",
          },
        ]
      }
      selectedKey="on"
      styles={
        {
          "flexContainer": [
            {
              "columnGap": "default",
              "display": "default",
              "selectors": {
                ".ms-ChoiceField-field.is-checked::after": {
                  "borderColor": "",
                },
                ".ms-ChoiceField-field.is-checked::before": {
                  "borderColor": "",
                },
                ".ms-ChoiceField-wrapper label": {
                  "fontFamily": undefined,
                  "fontSize": 14,
                  "padding": "2px 5px",
                  "whiteSpace": "nowrap",
                },
              },
            },
          ],
        }
      }
    />
    <StyledTextFieldBase
      ariaLabel="Time to live in seconds"
      data-test="ttl-input"
      id="timeToLiveSeconds"
      max={2147483647}
      min={1}
      onChange={[Function]}
      required={true}
      styles={
        {
          "fieldGroup": {
            "borderColor": "",
            "height": 25,
            "selectors": {
              ":disabled": {
                "backgroundColor": undefined,
                "borderColor": undefined,
              },
            },
            "width": 300,
          },
        }
      }
      suffix="second(s)"
      type="number"
      value="1000"
    />
  </Stack>
  <StyledChoiceGroup
    id="geoSpatialConfig"
    label="Geospatial Configuration"
    onChange={[Function]}
    options={
      [
        {
          "key": "Geography",
          "text": "Geography",
        },
        {
          "key": "Geometry",
          "text": "Geometry",
        },
      ]
    }
    selectedKey="Geography"
    styles={
      {
        "flexContainer": [
          {
            "columnGap": "default",
            "display": "default",
            "selectors": {
              ".ms-ChoiceField-field.is-checked::after": {
                "borderColor": "",
              },
              ".ms-ChoiceField-field.is-checked::before": {
                "borderColor": "",
              },
              ".ms-ChoiceField-wrapper label": {
                "fontFamily": undefined,
                "fontSize": 14,
                "padding": "2px 5px",
                "whiteSpace": "nowrap",
              },
            },
          },
        ],
      }
    }
  />
  <Stack
    tokens={
      {
        "childrenGap": 5,
      }
    }
  >
    <StyledChoiceGroup
      id="analyticalStorageTimeToLive"
      label="Analytical Storage Time to Live"
      onChange={[Function]}
      options={
        [
          {
            "disabled": true,
            "key": "off",
            "text": "Off",
          },
          {
            "key": "on-nodefault",
            "text": "On (no default)",
          },
          {
            "key": "on",
            "text": "On",
          },
        ]
      }
      selectedKey="on-nodefault"
      styles={
        {
          "flexContainer": [
            {
              "columnGap": "default",
              "display": "default",
              "selectors": {
                ".ms-ChoiceField-field.is-checked::after": {
                  "borderColor": undefined,
                },
                ".ms-ChoiceField-field.is-checked::before": {
                  "borderColor": undefined,
                },
                ".ms-ChoiceField-wrapper label": {
                  "fontFamily": undefined,
                  "fontSize": 14,
                  "padding": "2px 5px",
                  "whiteSpace": "nowrap",
                },
              },
            },
          ],
        }
      }
    />
  </Stack>
  <Stack>
    <StyledLabelBase
      id="settingsV2ChangeFeedLabelId"
    >
      <ToolTipLabelComponent
        label="Change feed log retention policy"
        toolTipElement={
          <Text
            styles={
              {
                "root": {
                  "color": "windowtext",
                  "fontSize": 14,
                },
              }
            }
          >
            Enable change feed log retention policy to retain last 10 minutes of history for items in the container by default. To support this, the request unit (RU) charge for this container will be multiplied by a factor of two for writes. Reads are unaffected.
          </Text>
        }
      />
    </StyledLabelBase>
    <StyledChoiceGroup
      aria-labelledby="settingsV2ChangeFeedLabelId"
      id="changeFeedPolicy"
      onChange={[Function]}
      options={
        [
          {
            "key": "Off",
            "text": "Off",
          },
          {
            "key": "On",
            "text": "On",
          },
        ]
      }
      selectedKey="On"
      styles={
        {
          "flexContainer": [
            {
              "columnGap": "default",
              "display": "default",
              "selectors": {
                ".ms-ChoiceField-field.is-checked::after": {
                  "borderColor": "",
                },
                ".ms-ChoiceField-field.is-checked::before": {
                  "borderColor": "",
                },
                ".ms-ChoiceField-wrapper label": {
                  "fontFamily": undefined,
                  "fontSize": 14,
                  "padding": "2px 5px",
                  "whiteSpace": "nowrap",
                },
              },
            },
          ],
        }
      }
    />
  </Stack>
  <Stack
    tokens={
      {
        "childrenGap": 5,
      }
    }
  >
    <StyledTextFieldBase
      defaultValue="/partitionKey"
      disabled={true}
      label="Partition key"
      styles={
        {
          "fieldGroup": {
            "borderColor": "",
            "height": 25,
            "selectors": {
              ":disabled": {
                "backgroundColor": undefined,
                "borderColor": undefined,
              },
            },
            "width": 300,
          },
        }
      }
    />
    <Text>
      Large 
      partition key
       has been enabled.
    </Text>
    <Text>
      Non-hierarchically partitioned container.
    </Text>
  </Stack>
  <Stack
    tokens={
      {
        "childrenGap": 5,
      }
    }
  >
    <StyledTextFieldBase
      defaultValue="/id"
      disabled={true}
      label="Unique keys"
      styles={
        {
          "fieldGroup": {
            "borderColor": "",
            "height": 25,
            "selectors": {
              ":disabled": {
                "backgroundColor": undefined,
                "borderColor": undefined,
              },
            },
            "width": 300,
          },
        }
      }
    />
  </Stack>
</Stack>
`;

exports[`SubSettingsComponent changeFeedPolicy hidden 1`] = `
<Stack
  tokens={
    {
      "childrenGap": 20,
    }
  }
>
  <Stack
    tokens={
      {
        "childrenGap": 5,
      }
    }
  >
    <StyledChoiceGroup
      id="timeToLive"
      label="Time to Live"
      onChange={[Function]}
      options={
        [
          {
            "ariaLabel": "ttl-off-option",
            "key": "off",
            "text": "Off",
          },
          {
            "ariaLabel": "ttl-on-no-default-option",
            "key": "on-nodefault",
            "text": "On (no default)",
          },
          {
            "ariaLabel": "ttl-on-option",
            "key": "on",
            "text": "On",
          },
        ]
      }
      selectedKey="on"
      styles={
        {
          "flexContainer": [
            {
              "columnGap": "default",
              "display": "default",
              "selectors": {
                ".ms-ChoiceField-field.is-checked::after": {
                  "borderColor": "",
                },
                ".ms-ChoiceField-field.is-checked::before": {
                  "borderColor": "",
                },
                ".ms-ChoiceField-wrapper label": {
                  "fontFamily": undefined,
                  "fontSize": 14,
                  "padding": "2px 5px",
                  "whiteSpace": "nowrap",
                },
              },
            },
          ],
        }
      }
    />
    <StyledTextFieldBase
      ariaLabel="Time to live in seconds"
      data-test="ttl-input"
      id="timeToLiveSeconds"
      max={2147483647}
      min={1}
      onChange={[Function]}
      required={true}
      styles={
        {
          "fieldGroup": {
            "borderColor": "",
            "height": 25,
            "selectors": {
              ":disabled": {
                "backgroundColor": undefined,
                "borderColor": undefined,
              },
            },
            "width": 300,
          },
        }
      }
      suffix="second(s)"
      type="number"
      value="1000"
    />
  </Stack>
  <StyledChoiceGroup
    id="geoSpatialConfig"
    label="Geospatial Configuration"
    onChange={[Function]}
    options={
      [
        {
          "key": "Geography",
          "text": "Geography",
        },
        {
          "key": "Geometry",
          "text": "Geometry",
        },
      ]
    }
    selectedKey="Geography"
    styles={
      {
        "flexContainer": [
          {
            "columnGap": "default",
            "display": "default",
            "selectors": {
              ".ms-ChoiceField-field.is-checked::after": {
                "borderColor": "",
              },
              ".ms-ChoiceField-field.is-checked::before": {
                "borderColor": "",
              },
              ".ms-ChoiceField-wrapper label": {
                "fontFamily": undefined,
                "fontSize": 14,
                "padding": "2px 5px",
                "whiteSpace": "nowrap",
              },
            },
          },
        ],
      }
    }
  />
  <Stack
    tokens={
      {
        "childrenGap": 5,
      }
    }
  >
    <StyledChoiceGroup
      id="analyticalStorageTimeToLive"
      label="Analytical Storage Time to Live"
      onChange={[Function]}
      options={
        [
          {
            "disabled": true,
            "key": "off",
            "text": "Off",
          },
          {
            "key": "on-nodefault",
            "text": "On (no default)",
          },
          {
            "key": "on",
            "text": "On",
          },
        ]
      }
      selectedKey="on"
      styles={
        {
          "flexContainer": [
            {
              "columnGap": "default",
              "display": "default",
              "selectors": {
                ".ms-ChoiceField-field.is-checked::after": {
                  "borderColor": "",
                },
                ".ms-ChoiceField-field.is-checked::before": {
                  "borderColor": "",
                },
                ".ms-ChoiceField-wrapper label": {
                  "fontFamily": undefined,
                  "fontSize": 14,
                  "padding": "2px 5px",
                  "whiteSpace": "nowrap",
                },
              },
            },
          ],
        }
      }
    />
    <StyledTextFieldBase
      id="analyticalStorageTimeToLiveSeconds"
      max={2147483647}
      min={1}
      onChange={[Function]}
      required={true}
      styles={
        {
          "fieldGroup": {
            "borderColor": "",
            "height": 25,
            "selectors": {
              ":disabled": {
                "backgroundColor": undefined,
                "borderColor": undefined,
              },
            },
            "width": 300,
          },
        }
      }
      suffix="second(s)"
      type="number"
      value="2000"
    />
  </Stack>
  <Stack
    tokens={
      {
        "childrenGap": 5,
      }
    }
  >
    <StyledTextFieldBase
      defaultValue="/partitionKey"
      disabled={true}
      label="Partition key"
      styles={
        {
          "fieldGroup": {
            "borderColor": "",
            "height": 25,
            "selectors": {
              ":disabled": {
                "backgroundColor": undefined,
                "borderColor": undefined,
              },
            },
            "width": 300,
          },
        }
      }
    />
    <Text>
      Large 
      partition key
       has been enabled.
    </Text>
    <Text>
      Non-hierarchically partitioned container.
    </Text>
  </Stack>
  <Stack
    tokens={
      {
        "childrenGap": 5,
      }
    }
  >
    <StyledTextFieldBase
      defaultValue="/id"
      disabled={true}
      label="Unique keys"
      styles={
        {
          "fieldGroup": {
            "borderColor": "",
            "height": 25,
            "selectors": {
              ":disabled": {
                "backgroundColor": undefined,
                "borderColor": undefined,
              },
            },
            "width": 300,
          },
        }
      }
    />
  </Stack>
</Stack>
`;

exports[`SubSettingsComponent renders 1`] = `
<Stack
  tokens={
    {
      "childrenGap": 20,
    }
  }
>
  <Stack
    tokens={
      {
        "childrenGap": 5,
      }
    }
  >
    <StyledChoiceGroup
      id="timeToLive"
      label="Time to Live"
      onChange={[Function]}
      options={
        [
          {
            "ariaLabel": "ttl-off-option",
            "key": "off",
            "text": "Off",
          },
          {
            "ariaLabel": "ttl-on-no-default-option",
            "key": "on-nodefault",
            "text": "On (no default)",
          },
          {
            "ariaLabel": "ttl-on-option",
            "key": "on",
            "text": "On",
          },
        ]
      }
      selectedKey="on"
      styles={
        {
          "flexContainer": [
            {
              "columnGap": "default",
              "display": "default",
              "selectors": {
                ".ms-ChoiceField-field.is-checked::after": {
                  "borderColor": "",
                },
                ".ms-ChoiceField-field.is-checked::before": {
                  "borderColor": "",
                },
                ".ms-ChoiceField-wrapper label": {
                  "fontFamily": undefined,
                  "fontSize": 14,
                  "padding": "2px 5px",
                  "whiteSpace": "nowrap",
                },
              },
            },
          ],
        }
      }
    />
    <StyledTextFieldBase
      ariaLabel="Time to live in seconds"
      data-test="ttl-input"
      id="timeToLiveSeconds"
      max={2147483647}
      min={1}
      onChange={[Function]}
      required={true}
      styles={
        {
          "fieldGroup": {
            "borderColor": "",
            "height": 25,
            "selectors": {
              ":disabled": {
                "backgroundColor": undefined,
                "borderColor": undefined,
              },
            },
            "width": 300,
          },
        }
      }
      suffix="second(s)"
      type="number"
      value="1000"
    />
  </Stack>
  <StyledChoiceGroup
    id="geoSpatialConfig"
    label="Geospatial Configuration"
    onChange={[Function]}
    options={
      [
        {
          "key": "Geography",
          "text": "Geography",
        },
        {
          "key": "Geometry",
          "text": "Geometry",
        },
      ]
    }
    selectedKey="Geography"
    styles={
      {
        "flexContainer": [
          {
            "columnGap": "default",
            "display": "default",
            "selectors": {
              ".ms-ChoiceField-field.is-checked::after": {
                "borderColor": "",
              },
              ".ms-ChoiceField-field.is-checked::before": {
                "borderColor": "",
              },
              ".ms-ChoiceField-wrapper label": {
                "fontFamily": undefined,
                "fontSize": 14,
                "padding": "2px 5px",
                "whiteSpace": "nowrap",
              },
            },
          },
        ],
      }
    }
  />
  <Stack
    tokens={
      {
        "childrenGap": 5,
      }
    }
  >
    <StyledChoiceGroup
      id="analyticalStorageTimeToLive"
      label="Analytical Storage Time to Live"
      onChange={[Function]}
      options={
        [
          {
            "disabled": true,
            "key": "off",
            "text": "Off",
          },
          {
            "key": "on-nodefault",
            "text": "On (no default)",
          },
          {
            "key": "on",
            "text": "On",
          },
        ]
      }
      selectedKey="on"
      styles={
        {
          "flexContainer": [
            {
              "columnGap": "default",
              "display": "default",
              "selectors": {
                ".ms-ChoiceField-field.is-checked::after": {
                  "borderColor": "",
                },
                ".ms-ChoiceField-field.is-checked::before": {
                  "borderColor": "",
                },
                ".ms-ChoiceField-wrapper label": {
                  "fontFamily": undefined,
                  "fontSize": 14,
                  "padding": "2px 5px",
                  "whiteSpace": "nowrap",
                },
              },
            },
          ],
        }
      }
    />
    <StyledTextFieldBase
      id="analyticalStorageTimeToLiveSeconds"
      max={2147483647}
      min={1}
      onChange={[Function]}
      required={true}
      styles={
        {
          "fieldGroup": {
            "borderColor": "",
            "height": 25,
            "selectors": {
              ":disabled": {
                "backgroundColor": undefined,
                "borderColor": undefined,
              },
            },
            "width": 300,
          },
        }
      }
      suffix="second(s)"
      type="number"
      value="2000"
    />
  </Stack>
  <Stack>
    <StyledLabelBase
      id="settingsV2ChangeFeedLabelId"
    >
      <ToolTipLabelComponent
        label="Change feed log retention policy"
        toolTipElement={
          <Text
            styles={
              {
                "root": {
                  "color": "windowtext",
                  "fontSize": 14,
                },
              }
            }
          >
            Enable change feed log retention policy to retain last 10 minutes of history for items in the container by default. To support this, the request unit (RU) charge for this container will be multiplied by a factor of two for writes. Reads are unaffected.
          </Text>
        }
      />
    </StyledLabelBase>
    <StyledChoiceGroup
      aria-labelledby="settingsV2ChangeFeedLabelId"
      id="changeFeedPolicy"
      onChange={[Function]}
      options={
        [
          {
            "key": "Off",
            "text": "Off",
          },
          {
            "key": "On",
            "text": "On",
          },
        ]
      }
      selectedKey="On"
      styles={
        {
          "flexContainer": [
            {
              "columnGap": "default",
              "display": "default",
              "selectors": {
                ".ms-ChoiceField-field.is-checked::after": {
                  "borderColor": "",
                },
                ".ms-ChoiceField-field.is-checked::before": {
                  "borderColor": "",
                },
                ".ms-ChoiceField-wrapper label": {
                  "fontFamily": undefined,
                  "fontSize": 14,
                  "padding": "2px 5px",
                  "whiteSpace": "nowrap",
                },
              },
            },
          ],
        }
      }
    />
  </Stack>
  <Stack
    tokens={
      {
        "childrenGap": 5,
      }
    }
  >
    <StyledTextFieldBase
      defaultValue="/partitionKey"
      disabled={true}
      label="Partition key"
      styles={
        {
          "fieldGroup": {
            "borderColor": "",
            "height": 25,
            "selectors": {
              ":disabled": {
                "backgroundColor": undefined,
                "borderColor": undefined,
              },
            },
            "width": 300,
          },
        }
      }
    />
    <Text>
      Large 
      partition key
       has been enabled.
    </Text>
    <Text>
      Non-hierarchically partitioned container.
    </Text>
  </Stack>
  <Stack
    tokens={
      {
        "childrenGap": 5,
      }
    }
  >
    <StyledTextFieldBase
      defaultValue="/id"
      disabled={true}
      label="Unique keys"
      styles={
        {
          "fieldGroup": {
            "borderColor": "",
            "height": 25,
            "selectors": {
              ":disabled": {
                "backgroundColor": undefined,
                "borderColor": undefined,
              },
            },
            "width": 300,
          },
        }
      }
    />
  </Stack>
</Stack>
`;

exports[`SubSettingsComponent timeToLiveSeconds hidden 1`] = `
<Stack
  tokens={
    {
      "childrenGap": 20,
    }
  }
>
  <Stack
    tokens={
      {
        "childrenGap": 5,
      }
    }
  >
    <StyledChoiceGroup
      id="timeToLive"
      label="Time to Live"
      onChange={[Function]}
      options={
        [
          {
            "ariaLabel": "ttl-off-option",
            "key": "off",
            "text": "Off",
          },
          {
            "ariaLabel": "ttl-on-no-default-option",
            "key": "on-nodefault",
            "text": "On (no default)",
          },
          {
            "ariaLabel": "ttl-on-option",
            "key": "on",
            "text": "On",
          },
        ]
      }
      selectedKey="off"
      styles={
        {
          "flexContainer": [
            {
              "columnGap": "default",
              "display": "default",
              "selectors": {
                ".ms-ChoiceField-field.is-checked::after": {
                  "borderColor": undefined,
                },
                ".ms-ChoiceField-field.is-checked::before": {
                  "borderColor": undefined,
                },
                ".ms-ChoiceField-wrapper label": {
                  "fontFamily": undefined,
                  "fontSize": 14,
                  "padding": "2px 5px",
                  "whiteSpace": "nowrap",
                },
              },
            },
          ],
        }
      }
    />
  </Stack>
  <StyledChoiceGroup
    id="geoSpatialConfig"
    label="Geospatial Configuration"
    onChange={[Function]}
    options={
      [
        {
          "key": "Geography",
          "text": "Geography",
        },
        {
          "key": "Geometry",
          "text": "Geometry",
        },
      ]
    }
    selectedKey="Geography"
    styles={
      {
        "flexContainer": [
          {
            "columnGap": "default",
            "display": "default",
            "selectors": {
              ".ms-ChoiceField-field.is-checked::after": {
                "borderColor": "",
              },
              ".ms-ChoiceField-field.is-checked::before": {
                "borderColor": "",
              },
              ".ms-ChoiceField-wrapper label": {
                "fontFamily": undefined,
                "fontSize": 14,
                "padding": "2px 5px",
                "whiteSpace": "nowrap",
              },
            },
          },
        ],
      }
    }
  />
  <Stack
    tokens={
      {
        "childrenGap": 5,
      }
    }
  >
    <StyledChoiceGroup
      id="analyticalStorageTimeToLive"
      label="Analytical Storage Time to Live"
      onChange={[Function]}
      options={
        [
          {
            "disabled": true,
            "key": "off",
            "text": "Off",
          },
          {
            "key": "on-nodefault",
            "text": "On (no default)",
          },
          {
            "key": "on",
            "text": "On",
          },
        ]
      }
      selectedKey="on"
      styles={
        {
          "flexContainer": [
            {
              "columnGap": "default",
              "display": "default",
              "selectors": {
                ".ms-ChoiceField-field.is-checked::after": {
                  "borderColor": "",
                },
                ".ms-ChoiceField-field.is-checked::before": {
                  "borderColor": "",
                },
                ".ms-ChoiceField-wrapper label": {
                  "fontFamily": undefined,
                  "fontSize": 14,
                  "padding": "2px 5px",
                  "whiteSpace": "nowrap",
                },
              },
            },
          ],
        }
      }
    />
    <StyledTextFieldBase
      id="analyticalStorageTimeToLiveSeconds"
      max={2147483647}
      min={1}
      onChange={[Function]}
      required={true}
      styles={
        {
          "fieldGroup": {
            "borderColor": "",
            "height": 25,
            "selectors": {
              ":disabled": {
                "backgroundColor": undefined,
                "borderColor": undefined,
              },
            },
            "width": 300,
          },
        }
      }
      suffix="second(s)"
      type="number"
      value="2000"
    />
  </Stack>
  <Stack>
    <StyledLabelBase
      id="settingsV2ChangeFeedLabelId"
    >
      <ToolTipLabelComponent
        label="Change feed log retention policy"
        toolTipElement={
          <Text
            styles={
              {
                "root": {
                  "color": "windowtext",
                  "fontSize": 14,
                },
              }
            }
          >
            Enable change feed log retention policy to retain last 10 minutes of history for items in the container by default. To support this, the request unit (RU) charge for this container will be multiplied by a factor of two for writes. Reads are unaffected.
          </Text>
        }
      />
    </StyledLabelBase>
    <StyledChoiceGroup
      aria-labelledby="settingsV2ChangeFeedLabelId"
      id="changeFeedPolicy"
      onChange={[Function]}
      options={
        [
          {
            "key": "Off",
            "text": "Off",
          },
          {
            "key": "On",
            "text": "On",
          },
        ]
      }
      selectedKey="On"
      styles={
        {
          "flexContainer": [
            {
              "columnGap": "default",
              "display": "default",
              "selectors": {
                ".ms-ChoiceField-field.is-checked::after": {
                  "borderColor": "",
                },
                ".ms-ChoiceField-field.is-checked::before": {
                  "borderColor": "",
                },
                ".ms-ChoiceField-wrapper label": {
                  "fontFamily": undefined,
                  "fontSize": 14,
                  "padding": "2px 5px",
                  "whiteSpace": "nowrap",
                },
              },
            },
          ],
        }
      }
    />
  </Stack>
  <Stack
    tokens={
      {
        "childrenGap": 5,
      }
    }
  >
    <StyledTextFieldBase
      defaultValue="/partitionKey"
      disabled={true}
      label="Partition key"
      styles={
        {
          "fieldGroup": {
            "borderColor": "",
            "height": 25,
            "selectors": {
              ":disabled": {
                "backgroundColor": undefined,
                "borderColor": undefined,
              },
            },
            "width": 300,
          },
        }
      }
    />
    <Text>
      Large 
      partition key
       has been enabled.
    </Text>
    <Text>
      Non-hierarchically partitioned container.
    </Text>
  </Stack>
  <Stack
    tokens={
      {
        "childrenGap": 5,
      }
    }
  >
    <StyledTextFieldBase
      defaultValue="/id"
      disabled={true}
      label="Unique keys"
      styles={
        {
          "fieldGroup": {
            "borderColor": "",
            "height": 25,
            "selectors": {
              ":disabled": {
                "backgroundColor": undefined,
                "borderColor": undefined,
              },
            },
            "width": 300,
          },
        }
      }
    />
  </Stack>
</Stack>
`;
